<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/packed_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
      >

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/packed_swipe_refresh_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/packed_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none" />

        </android.support.v4.widget.SwipeRefreshLayout>

        <TextView
            android:id="@+id/packed_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/no_data_available"
            android:textSize="@dimen/_13sdp"
            android:visibility="gone" />

    </android.support.design.widget.CoordinatorLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:weightSum="1"
        >

        <TextView
            android:id="@+id/packed_text_add"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="@color/add_light_blue"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/add"
            android:textSize="@dimen/_10sdp"/>

        <TextView
            android:id="@+id/packed_text_deliver"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="match_parent"
            android:background="@color/add_light_red"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/deliver"
            android:textSize="@dimen/_10sdp"/>

    </LinearLayout>
    </LinearLayout>

</FrameLayout>