<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/_18sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_10sdp"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="sans-serif"
            android:text="@string/download_goods_receipt"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="@dimen/_15sdp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/download_confirm_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:gravity="center"
            android:text="@string/download_receipt_confirm_msg"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.5">

                <TextView
                    android:id="@+id/btn_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:background="@color/green"
                    android:gravity="center"
                    android:paddingBottom="@dimen/_6sdp"
                    android:paddingTop="@dimen/_6sdp"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12sdp" />

                <ProgressBar
                    android:id="@+id/dialog_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_alignEnd="@+id/btn_ok"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_15sdp"
                android:layout_weight="0.5"
                android:background="@color/gray"
                android:gravity="center"
                android:paddingBottom="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:text="@string/no_cancel"
                android:textColor="@color/white"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>