<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:theme="@style/AppTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="@string/select_warehouse"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="18sp"
            android:textStyle="normal" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/select_dialog_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:scrollbars="none" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/btn_ok"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:elevation="10dp"
                    android:text="@string/ok"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/dialog_select_warehouse_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/btn_ok"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="visible" />

            </RelativeLayout>


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@color/gray"
                android:elevation="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>