<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:theme="@style/AppTheme">

        <TextView
            android:id="@+id/dialog_gatepass_authentication_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/_10sdp"
            android:fontFamily="sans-serif"
            android:inputType="textMultiLine"
            android:text="@string/confirm_gatepass"
            android:textAllCaps="false"
            android:textColor="@color/blueTurquoise"
            android:textSize="18sp"
            android:textStyle="normal" />


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_12sdp"
            android:layout_marginRight="@dimen/_12sdp"
            android:clipToPadding="false"
            android:gravity="left|center"
            app:hintTextAppearance="@style/CustomTextAppearance">

            <AutoCompleteTextView
                android:id="@+id/dialog_gatepass_authentication_delivery_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="left"
                android:hint="Delivery User:"
                android:imeOptions="actionNext"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:textColor="@color/darkGray"
                android:textColorHint="@color/gray"
                android:textSize="@dimen/_10sdp" />

        </android.support.design.widget.TextInputLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:layout_weight="0.5">

                <Button
                    android:id="@+id/dialog_gatepass_authentication_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/green"
                    android:elevation="10dp"
                    android:text="@string/confirm"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/cancel_gatepass_progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="@dimen/_16sdp"
                    android:layout_height="match_parent"
                    android:layout_alignEnd="@+id/btn_ok"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="10dp"
                    android:indeterminateTint="@color/white"
                    android:visibility="visible" />

            </RelativeLayout>

            <Button
                android:id="@+id/dialog_gatepass_authentication_cancel"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:layout_weight="0.5"
                android:background="@color/gray"
                android:elevation="10dp"
                android:text="@string/cancel"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>